--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Mi primer web</title>
+    <title>Mi primer web con git</title>
 </head>
 <body>
     <h1>Hola mundo!</h1>
